# hantavirus-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.mjs  tsconfig.json
.claude/: settings.json
.claude/agents/: data-curator.md  epi-writer.md  frontend-engineer.md  spread-analyst.md
.claude/hooks/: validate-geojson.sh
.claude/skills/: add-incident.md  deploy.md  refresh-data.md
.github/workflows/: ci.yml  daily-ingest.yml  deploy.yml
data/: _status.json  comparison.json  cruise_analysis.json  feed.json  hantavirus.geojson  overview.json
ingest/: __init__.py  cli.py  comparison.py  cruise_analysis.py  normalize.py  schemas.py
ingest/sources/: _common.py  argentina.py  cdc.py  chile.py  cruise_outbreak.py  ecdc.py  healthmap.py  nndss.py  paho.py  promed.py  pubmed.py  seed.py  who.py  who_event.py
scripts/: cron-ingest.sh  deploy.sh  diff-data.sh  hanta-ingest.service  hanta-ingest.timer
src/components/: AdSlot.astro  ConfidenceLegend.astro  Footer.astro  MapApp.astro  Nav.astro
src/layouts/: Base.astro
src/pages/: about.astro  compare.astro  feeds.astro  index.astro  rss.xml.ts
src/styles/: global.css
